Show a loading image while the search occurs. Also fixed the date slider which had got out of place, which necessitated changing the css of everything.

--- a/public/css/date_slider.less
+++ b/public/css/date_slider.less
@@ -1,8 +1,6 @@
 #slider-range {
-  position: fixed;
   top: 0;
   margin-left: 250px;
-  width: 100%;
   height: 16px;
 
   .ui-slider-handle {
