--- a/public/css/map.less
+++ b/public/css/map.less
@@ -4,6 +4,9 @@
   height: 100%;
   overflow: hidden;
   padding-bottom: 50px;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .filters-visible #map-holder {
