--- a/public/css/search_box.less
+++ b/public/css/search_box.less
@@ -16,6 +16,13 @@
       line-height: 16px;
     }
   }
+  &.loading {
+    #search {
+      background-image: url(/img/loading.gif) !important;
+      background-position: right center;
+      background-repeat: no-repeat;
+    }
+  }
   .search-results {
     width: 250px;
     overflow-y: auto;
